<resources>
    <string name="app_name">ShoppingClient</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_out">sign out</string>
    <string name="description">mô tả</string>
    <string name="food_name">Food Name</string>
    <string name="view_orders">đơn mua</string>
    <string name="view_orders_seller">đơn bán</string>
</resources>